--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			<div id="enemy"></div>
 		</div>
 		<div id="deck">
+			<span id="deck-count">30</span>
 			<div class="card back">
 				<img class="icon" src="assets/art/icon.png" />
 			</div>
